:sparkles: [#121] added expand for klantinteracties - klantcontact endpoint
