# src/openklant/components/klantinteracties/swagger2.0.json
@@ -2384,6 +2384,29 @@
                         "type": "string"
                     },
                     {
+                        "name": "expand",
+                        "in": "query",
+                        "description": "Sluit de gespecifieerde gerelateerde resources in in het antwoord. ",
+                        "required": false,
+                        "type": "array",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string",
+                                "enum": [
+                                    "had_betrokkenen",
+                                    "had_betrokken_actoren",
+                                    "leidde_tot_interne_taken",
+                                    "ging_over_onderwerpobjecten",
+                                    "omvatte_bijlagen",
+                                    "had_betrokkenen.was_partij"
+                                ]
+                            }
+                        },
+                        "style": "form",
+                        "explode": false
+                    },
+                    {
                         "name": "page",
                         "in": "query",
                         "description": "Een pagina binnen de gepagineerde set resultaten.",
@@ -2417,7 +2440,38 @@
                                 "results": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/definitions/Klantcontact"
+                                        "type": "object",
+                                        "allOf": [
+                                            {
+                                                "$ref": "#/definitions/Klantcontact"
+                                            },
+                                            {
+                                                "type": "object",
+                                                "properties": {
+                                                    "_expand": {
+                                                        "description": "Display details of the linked resources requested in the `expand` parameter",
+                                                        "type": "object",
+                                                        "properties": {
+                                                            "had_betrokkenen": {
+                                                                "$ref": "#/definitions/Betrokkene"
+                                                            },
+                                                            "had_betrokken_actoren": {
+                                                                "$ref": "#/definitions/Actor"
+                                                            },
+                                                            "leidde_tot_interne_taken": {
+                                                                "$ref": "#/definitions/InterneTaak"
+                                                            },
+                                                            "ging_over_onderwerpobjecten": {
+                                                                "$ref": "#/definitions/Onderwerpobject"
+                                                            },
+                                                            "omvatte_bijlagen": {
+                                                                "$ref": "#/definitions/Bijlage"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        ]
                                     }
                                 }
                             }
@@ -4339,7 +4393,7 @@
             },
             "discriminator": "soortActor"
         },
-        "MedewerkerBase": {
+        "Medewerker": {
             "required": [
                 "functie",
                 "telefoonnummer"
@@ -4369,11 +4423,11 @@
                 }
             }
         },
-        "actor_identificatie_MedewerkerBase": {
+        "actor_identificatie_Medewerker": {
             "type": "object",
             "properties": {
                 "actorIdentificatie": {
-                    "$ref": "#/definitions/MedewerkerBase"
+                    "$ref": "#/definitions/Medewerker"
                 }
             }
         },
@@ -4384,11 +4438,11 @@
                     "$ref": "#/definitions/Actor"
                 },
                 {
-                    "$ref": "#/definitions/actor_identificatie_MedewerkerBase"
+                    "$ref": "#/definitions/actor_identificatie_Medewerker"
                 }
             ]
         },
-        "GeautomatiseerdeActorBase": {
+        "GeautomatiseerdeActor": {
             "required": [
                 "functie"
             ],
@@ -4409,11 +4463,11 @@
                 }
             }
         },
-        "actor_identificatie_GeautomatiseerdeActorBase": {
+        "actor_identificatie_GeautomatiseerdeActor": {
             "type": "object",
             "properties": {
                 "actorIdentificatie": {
-                    "$ref": "#/definitions/GeautomatiseerdeActorBase"
+                    "$ref": "#/definitions/GeautomatiseerdeActor"
                 }
             }
         },
@@ -4424,11 +4478,11 @@
                     "$ref": "#/definitions/Actor"
                 },
                 {
-                    "$ref": "#/definitions/actor_identificatie_GeautomatiseerdeActorBase"
+                    "$ref": "#/definitions/actor_identificatie_GeautomatiseerdeActor"
                 }
             ]
         },
-        "OrganisatorischeEenheidBase": {
+        "OrganisatorischeEenheid": {
             "required": [
                 "faxnummer",
                 "telefoonnummer"
@@ -4464,11 +4518,11 @@
                 }
             }
         },
-        "actor_identificatie_OrganisatorischeEenheidBase": {
+        "actor_identificatie_OrganisatorischeEenheid": {
             "type": "object",
             "properties": {
                 "actorIdentificatie": {
-                    "$ref": "#/definitions/OrganisatorischeEenheidBase"
+                    "$ref": "#/definitions/OrganisatorischeEenheid"
                 }
             }
         },
@@ -4479,7 +4533,7 @@
                     "$ref": "#/definitions/Actor"
                 },
                 {
-                    "$ref": "#/definitions/actor_identificatie_OrganisatorischeEenheidBase"
+                    "$ref": "#/definitions/actor_identificatie_OrganisatorischeEenheid"
                 }
             ]
         },
@@ -4669,19 +4723,19 @@
                     "type": "string",
                     "maxLength": 255
                 },
-                "adresregel1": {
+                "adresregel_1": {
                     "title": "Adresregel 1",
                     "description": "Eerste deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel2": {
+                "adresregel_2": {
                     "title": "Adresregel 2",
                     "description": "Tweede deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel3": {
+                "adresregel_3": {
                     "title": "Adresregel 3",
                     "description": "Derde deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
@@ -4707,19 +4761,19 @@
                     "type": "string",
                     "maxLength": 255
                 },
-                "adresregel1": {
+                "adresregel_1": {
                     "title": "Adresregel 1",
                     "description": "Eerste deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel2": {
+                "adresregel_2": {
                     "title": "Adresregel 2",
                     "description": "Tweede deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel3": {
+                "adresregel_3": {
                     "title": "Adresregel 3",
                     "description": "Derde deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
@@ -5084,8 +5138,7 @@
                     "maxLength": 1000,
                     "minLength": 1
                 }
-            },
-            "x-nullable": true
+            }
         },
         "BijlageForeignKey": {
             "description": "Bijlage die (een deel van) de inhoud van het klantcontact beschrijft.",
@@ -5109,8 +5162,7 @@
                     "maxLength": 1000,
                     "minLength": 1
                 }
-            },
-            "x-nullable": true
+            }
         },
         "BetrokkeneForeignkey": {
             "description": "Persoon of organisatie die betrokken was bij een klantcontact.",
@@ -5134,8 +5186,7 @@
                     "maxLength": 1000,
                     "minLength": 1
                 }
-            },
-            "x-nullable": true
+            }
         },
         "InterneTaakForeignKey": {
             "description": "Klantcontact dat leidde tot een interne taak.",
@@ -5159,15 +5210,10 @@
                     "maxLength": 1000,
                     "minLength": 1
                 }
-            },
-            "x-nullable": true
+            }
         },
         "Klantcontact": {
             "required": [
-                "gingOverOnderwerpobjecten",
-                "omvatteBijlagen",
-                "hadBetrokkenen",
-                "leiddeTotInterneTaken",
                 "nummer",
                 "kanaal",
                 "onderwerp",
@@ -5199,7 +5245,7 @@
                     "items": {
                         "$ref": "#/definitions/OnderwerpobjectForeignKey"
                     },
-                    "x-nullable": true
+                    "readOnly": true
                 },
                 "omvatteBijlagen": {
                     "description": "Bijlage die (een deel van) de inhoud van het klantcontact beschrijft.",
@@ -5207,7 +5253,7 @@
                     "items": {
                         "$ref": "#/definitions/BijlageForeignKey"
                     },
-                    "x-nullable": true
+                    "readOnly": true
                 },
                 "hadBetrokkenen": {
                     "description": "Persoon of organisatie die betrokken was bij een klantcontact.",
@@ -5215,7 +5261,7 @@
                     "items": {
                         "$ref": "#/definitions/BetrokkeneForeignkey"
                     },
-                    "x-nullable": true
+                    "readOnly": true
                 },
                 "leiddeTotInterneTaken": {
                     "description": "Klantcontact dat leidde tot een interne taak.",
@@ -5223,7 +5269,7 @@
                     "items": {
                         "$ref": "#/definitions/InterneTaakForeignKey"
                     },
-                    "x-nullable": true
+                    "readOnly": true
                 },
                 "nummer": {
                     "title": "Nummer",
@@ -5348,7 +5394,8 @@
                 "objectidentificator": {
                     "$ref": "#/definitions/OnderwerpobjectObjectidentificator"
                 }
-            }
+            },
+            "insideInclusion": true
         },
         "PartijIdentificatorGroepType": {
             "description": "Gegevens die een partij in een basisregistratie of ander extern register uniek identificeren.",
@@ -5465,8 +5512,7 @@
                     "maxLength": 1000,
                     "minLength": 1
                 }
-            },
-            "x-nullable": true
+            }
         },
         "PartijBezoekadres": {
             "description": "Adres waarop de partij door gemeente bezocht wil worden. Dit mag afwijken van voor de verstrekker eventueel in een basisregistratie bekende adressen.",
@@ -5478,19 +5524,19 @@
                     "type": "string",
                     "maxLength": 255
                 },
-                "adresregel1": {
+                "adresregel_1": {
                     "title": "Adresregel 1",
                     "description": "Eerste deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel2": {
+                "adresregel_2": {
                     "title": "Adresregel 2",
                     "description": "Tweede deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel3": {
+                "adresregel_3": {
                     "title": "Adresregel 3",
                     "description": "Derde deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
@@ -5516,19 +5562,19 @@
                     "type": "string",
                     "maxLength": 255
                 },
-                "adresregel1": {
+                "adresregel_1": {
                     "title": "Adresregel 1",
                     "description": "Eerste deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel2": {
+                "adresregel_2": {
                     "title": "Adresregel 2",
                     "description": "Tweede deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
                     "maxLength": 80
                 },
-                "adresregel3": {
+                "adresregel_3": {
                     "title": "Adresregel 3",
                     "description": "Derde deel van het adres dat niet voorkomt in de Basisregistratie Adressen en Gebouwen.",
                     "type": "string",
@@ -5547,11 +5593,9 @@
         "Partij": {
             "required": [
                 "nummer",
-                "betrokkenen",
                 "digitaleAdressen",
                 "voorkeursDigitaalAdres",
                 "vertegenwoordigde",
-                "partijIdentificatoren",
                 "soortPartij",
                 "indicatieGeheimhouding",
                 "indicatieActief"
@@ -5593,7 +5637,7 @@
                     "items": {
                         "$ref": "#/definitions/BetrokkeneForeignKey"
                     },
-                    "x-nullable": true
+                    "readOnly": true
                 },
                 "digitaleAdressen": {
                     "description": "Digitaal adres dat een partij verstrekte voor gebruik bij toekomstig contact met de gemeente.",
@@ -5620,7 +5664,7 @@
                     "items": {
                         "$ref": "#/definitions/PartijIdentificatorForeignkey"
                     },
-                    "x-nullable": true
+                    "readOnly": true
                 },
                 "soortPartij": {
                     "title": "Soort partij",
@@ -5713,7 +5757,7 @@
             },
             "x-nullable": true
         },
-        "ContactpersoonBase": {
+        "Contactpersoon": {
             "required": [
                 "werkteVoorPartij"
             ],
@@ -5733,11 +5777,11 @@
                 }
             }
         },
-        "partij_identificatie_ContactpersoonBase": {
+        "partij_identificatie_Contactpersoon": {
             "type": "object",
             "properties": {
                 "partijIdentificatie": {
-                    "$ref": "#/definitions/ContactpersoonBase"
+                    "$ref": "#/definitions/Contactpersoon"
                 }
             }
         },
@@ -5748,7 +5792,7 @@
                     "$ref": "#/definitions/Partij"
                 },
                 {
-                    "$ref": "#/definitions/partij_identificatie_ContactpersoonBase"
+                    "$ref": "#/definitions/partij_identificatie_Contactpersoon"
                 }
             ]
         },
@@ -5783,7 +5827,7 @@
             },
             "x-nullable": true
         },
-        "PersoonBase": {
+        "Persoon": {
             "required": [
                 "contactnaam"
             ],
@@ -5794,11 +5838,11 @@
                 }
             }
         },
-        "partij_identificatie_PersoonBase": {
+        "partij_identificatie_Persoon": {
             "type": "object",
             "properties": {
                 "partijIdentificatie": {
-                    "$ref": "#/definitions/PersoonBase"
+                    "$ref": "#/definitions/Persoon"
                 }
             }
         },
@@ -5809,11 +5853,11 @@
                     "$ref": "#/definitions/Partij"
                 },
                 {
-                    "$ref": "#/definitions/partij_identificatie_PersoonBase"
+                    "$ref": "#/definitions/partij_identificatie_Persoon"
                 }
             ]
         },
-        "OrganisatieBase": {
+        "Organisatie": {
             "type": "object",
             "properties": {
                 "naam": {
@@ -5824,11 +5868,11 @@
                 }
             }
         },
-        "partij_identificatie_OrganisatieBase": {
+        "partij_identificatie_Organisatie": {
             "type": "object",
             "properties": {
                 "partijIdentificatie": {
-                    "$ref": "#/definitions/OrganisatieBase"
+                    "$ref": "#/definitions/Organisatie"
                 }
             }
         },
@@ -5839,7 +5883,7 @@
                     "$ref": "#/definitions/Partij"
                 },
                 {
-                    "$ref": "#/definitions/partij_identificatie_OrganisatieBase"
+                    "$ref": "#/definitions/partij_identificatie_Organisatie"
                 }
             ]
         }
